bands, collider fixes etc.

--- a/src/js/components/Map/Map.scss
+++ b/src/js/components/Map/Map.scss
@@ -49,4 +49,13 @@
       r: 1;
     }
   }
+
+  .strings {
+    path {
+      stroke: pink;
+      stroke-width:1.5;
+      fill: none;
+      opacity: 0.3;
+    }
+  }
 }
